--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,4 +73,6 @@ ignore_missing_imports = true
 [tool.ruff]
 line-length = 88
 target-version = "py310"
+
+[tool.ruff.lint]
 select = ["E", "F", "I", "W", "B"]
