Add diagnostic testing framework and troubleshooting tests for core functionality
This commit adds a comprehensive diagnostic testing framework to help isolate and debug issues with the Tree-sitter integration:

- Created pytest-based diagnostic plugin with enhanced error reporting and artifact generation
- Added diagnostic tests for language registry, AST parsing, and query handling
- Updated Makefile with new diagnostic-specific targets
- Added documentation explaining the diagnostic approach and issue priorities
- Updated feature matrix to accurately reflect current implementation status

The diagnostics tests confirm several key issues:
1. Language registry reports empty lists despite languages being available
2. AST parsing functionality fails with cryptic error codes
3. Analysis functions fail with "too many values to unpack" errors

Tests are structured to facilitate targeted fixes and verify progress incrementally.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "mcp-server-tree-sitter"
-version = "0.2.0"
+version = "0.3.0"
 description = "MCP Server for Tree-sitter code analysis"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -55,6 +55,11 @@ packages = ["src/mcp_server_tree_sitter"]
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = "test_*.py"
+python_classes = "Test*"
+python_functions = "test_*"
+markers = [
+    "diagnostic: mark test as producing diagnostic information",
+]
 
 [tool.mypy]
 python_version = "3.10"
