Adopt 120 char line length. Clean up `make format` issues.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,8 +72,11 @@ disallow_incomplete_defs = true
 module = "tree_sitter.*"
 ignore_missing_imports = true
 
+[tool.black]
+line-length = 120
+
 [tool.ruff]
-line-length = 88
+line-length = 120
 target-version = "py310"
 
 [tool.ruff.lint]
