refactor: rename executable from mcp-ts to mcp-server-tree-sitter
Rename the main executable from mcp-ts to mcp-server-tree-sitter to match
the package name for better discoverability and intuitive usage. This change:

- Updates the entry point in pyproject.toml
- Updates CI/CD workflows to verify the new executable name
- Adds documentation for using the renamed executable with uvx

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,4 +111,4 @@ jobs:
     - name: Install and verify
       run: |
         python -m pip install dist/*.whl
-        mcp-ts --help
+        mcp-server-tree-sitter --help
