--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "mcp-server-tree-sitter"
-version = "0.3.3"
+version = "0.4.0"
 description = "MCP Server for Tree-sitter code analysis"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -27,6 +27,7 @@ dependencies = [
     "tree-sitter-language-pack>=0.6.1",
     "pyyaml>=6.0",
     "pydantic>=2.0.0",
+    "types-pyyaml>=6.0.12.20241230",
 ]
 
 [project.optional-dependencies]
